ChatWrapper FirebaseProvider DB추가

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_STORAGE_BUCKET="booldook-store.firebasestorage.app"
 VITE_MESSAGING_SENDER_ID="491904710503"
 VITE_APP_ID="1:491904710503:web:a8a22a1676fc38030b61c2"
 VITE_MEASUREMENT_ID="G-6PTPXBLYQR"
+VITE_RTDB_URL="https://booldook-store-default-rtdb.firebaseio.com"
