--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ VITE_MESSAGING_SENDER_ID="491904710503"
 VITE_APP_ID="1:491904710503:web:a8a22a1676fc38030b61c2"
 VITE_MEASUREMENT_ID="G-6PTPXBLYQR"
 VITE_RTDB_URL="https://booldook-store-default-rtdb.firebaseio.com"
+
+VITE_EXPRESS_API="http://localhost:3000"
