--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ VITE_MEASUREMENT_ID="G-6PTPXBLYQR"
 VITE_RTDB_URL="https://booldook-store-default-rtdb.firebaseio.com"
 
 VITE_EXPRESS_API="http://localhost:3000"
+VITE_REFRESH_API="/public/refresh"
