--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ VITE_RTDB_URL="https://booldook-store-default-rtdb.firebaseio.com"
 
 VITE_EXPRESS_API="http://localhost:3000"
 VITE_REFRESH_API="/public/refresh"
+VITE_TIMEOUT_API=10000
